# telepathy-salut

./: .gitignore  Android.mk  COPYING  Makefile.am  NEWS  README  _boring  autogen.sh  configure.ac
data/: Makefile.am  org.freedesktop.Telepathy.ConnectionManager.salut.service.in  salut.service.in
docs/: Makefile.am  README  clique.xml  room-invitation.xml  telepathy-salut-1.8.in  telepathy-salut.8.in  tubes.txt
extensions/: Channel_Interface_File_Transfer_Metadata.xml  Channel_Type_File.xml  Channel_Type_File_Transfer.xml  Connection_Future.xml  Makefile.am  OLPC_Activity_Properties.xml  OLPC_Buddy_Info.xml  Salut_Plugin_Test.xml  all.xml  channel.xml  connection.xml  extensions.c  extensions.h  spec-ft-gen.am  spec-gen.am
extensions/tools/: Makefile.am  c-constants-generator.xsl  c-interfaces-generator.xsl  genginterface.py  ls-interfaces.xsl
lib/gibber/: AUTHORS  COPYING  Makefile.am  gibber-bytestream-direct.c  gibber-bytestream-direct.h  gibber-bytestream-ibb-signals-marshal.list  gibber-bytestream-ibb.c  gibber-bytestream-ibb.h  gibber-bytestream-iface.c  gibber-bytestream-iface.h  gibber-bytestream-muc.c  gibber-bytestream-muc.h  gibber-bytestream-oob.c  gibber-bytestream-oob.h  gibber-debug.c  gibber-debug.h  gibber-fd-transport.c  gibber-fd-transport.h  gibber-file-transfer.c  gibber-file-transfer.h  gibber-iq-helper.c  gibber-iq-helper.h  gibber-linklocal-transport.c  gibber-linklocal-transport.h  gibber-listener.c  gibber-listener.h  gibber-muc-connection-signals-marshal.list  gibber-muc-connection.c  gibber-muc-connection.h  gibber-multicast-transport.c  gibber-multicast-transport.h  gibber-namespaces.h  gibber-oob-file-transfer.c  gibber-oob-file-transfer.h  gibber-r-multicast-causal-transport.c  gibber-r-multicast-causal-transport.h  gibber-r-multicast-packet.c  gibber-r-multicast-packet.h  gibber-r-multicast-sender-signals-marshal.list  gibber-r-multicast-sender.c  (+37 more)
lib/gibber/examples/: Makefile.am  test-resolv.c  test-ssl.c  test-tcp.c
lib/gibber/tests/: Makefile.am  check-gibber-iq-helper.c  check-gibber-listener.c  check-gibber-r-multicast-causal-transport.c  check-gibber-r-multicast-packet.c  check-gibber-r-multicast-sender.c  check-gibber-unix-transport.c  check-gibber-xmpp-connection-listener.c  check-gibber-xmpp-connection.c  check-gibber-xmpp-error.c  check-gibber-xmpp-node.c  check-gibber-xmpp-reader.c  check-gibber-xmpp-stanza.c  check-gibber.h  check-main.c  mesh.py  simplemeshtest.py  test-r-multicast-transport-io.c  test-resolver.c  test-resolver.h  test-transport.c  test-transport.h  test-xmpp-connection.c
plugins/: Makefile.am  test.c  test.h
salut/: Makefile.am  capabilities.h  caps-channel-manager.h  connection.h  plugin-connection.h  plugin-contact.h  plugin.h  protocol.h  sidecar.h  telepathy-salut-1-uninstalled.pc.in  telepathy-salut-1.pc.in  telepathy-salut-uninstalled.pc.in  telepathy-salut.pc.in  util.h
src/: Makefile.am  avahi-contact-manager.c  avahi-contact-manager.h  avahi-contact.c  avahi-contact.h  avahi-discovery-client.c  avahi-discovery-client.h  avahi-muc-channel.c  avahi-muc-channel.h  avahi-muc-manager.c  avahi-muc-manager.h  avahi-olpc-activity-manager.c  avahi-olpc-activity-manager.h  avahi-olpc-activity.c  avahi-olpc-activity.h  avahi-roomlist-manager.c  avahi-roomlist-manager.h  avahi-self.c  avahi-self.h  base64.c  bonjour-contact-manager.c  bonjour-contact-manager.h  bonjour-contact.c  bonjour-contact.h  bonjour-discovery-client.c  bonjour-discovery-client.h  bonjour-self.c  bonjour-self.h  capabilities-set.c  capabilities.c  capabilities.h  capability-set.c  caps-channel-manager.c  caps-hash.c  caps-hash.h  channel-manager.c  channel-manager.h  conn-requests.c  conn-requests.h  connection-contact-info.c  (+223 more)
src/sha1/: sha1-util.c  sha1-util.h
tests/: Makefile.am  README  causalorderingtest.py  check-gibber-iq-helper.c  check-gibber-listener.c  check-gibber-r-multicast-causal-transport.c  check-gibber-r-multicast-packet.c  check-gibber-r-multicast-sender.c  check-gibber-r-multicast-transport.c  check-gibber-resolver.c  check-gibber-sasl-auth.c  check-gibber-stanza-build.c  check-gibber-xmpp-connection-listener.c  check-gibber-xmpp-connection.c  check-gibber-xmpp-error.c  check-gibber-xmpp-node.c  check-gibber-xmpp-reader.c  check-gibber-xmpp-stanza.c  check-gibber.h  check-helpers.c  check-helpers.h  check-main.c  check-node-properties.c  check-salut.h  continous-failure.py  debug.c  died-node.py  dlopen.supp  failmeshtest.py  failnamemeshtest.py  mesh.py  repair-after-fail-test.py  repair-after-node-disconnected-test.py  run-test.sh  run-xmpp-connection-test.sh  salut-debug.c  simplemeshtest.py  test-r-multicast-packet.c  test-r-multicast-sender.c  test-r-multicast-transport-io.c  (+10 more)
tests/inputs/: groupchat-invite.input  simple-message-attrnamespace.input  simple-message.input  simple-message2.input  strange-streamopening.input  tls-stream-start.input
tests/twisted/: Makefile.am  avahimock.py  avahitest.py  caps_helper.py  constants.py  ipv6.py  ns.py  run-test.sh.in  saluttest.py  servicetest.py  sidecars.py  trivialstream.py  xmppstream.py
tests/twisted/avahi/: aliases.py  caps-file-transfer.py  caps-self.py  caps-tubes.py  caps_helper.py  close-local-pending-room.py  file_transfer_helper.py  ichat-composing.py  ichat-incoming-msg.py  muc-invite.py  olpc-activity-announcements.py  only-text-muc-when-needed.py  request-im.py  request-muc.py  roomlist.py  set-presence.py  test-aliases.py  test-caps-file-transfer.py  test-caps-self.py  test-caps-tubes.py  test-close-local-pending-room.py  test-disabled-1-1-tubes.py  test-ichat-composing.py  test-ichat-incoming-msg.py  test-ichat-receive-directory.py  test-ichat-receive-file.py  test-ichat-send-file-declined.py  test-ichat-send-file.py  test-muc-invite.py  test-offer-private-stream-tube.py  test-olpc-activity-announcements.py  test-receive-and-send-file.py  test-receive-file-and-disconnect.py  test-receive-file-and-sender-disconnect-while-pending.py  test-receive-file-and-sender-disconnect.py  test-receive-file-cancelled-immediately.py  (+30 more)
tools/: Makefile.am
(+95 files in other folders)
