if ENABLE_PLUGIN_API
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = telepathy-salut.pc

salutincludedir = $(includedir)/telepathy-salut-0/salut
salutinclude_HEADERS = \
    connection.h \
    plugin.h \
    protocol.h \
    capabilities-set.h \
    caps-channel-manager.h \
    capabilities.h \
    sidecar.h

endif
