if ENABLE_PLUGIN_API
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = telepathy-salut.pc

salutincludedir = $(includedir)/telepathy-salut-0/salut
salutinclude_HEADERS = \
    plugin.h \
    plugin-connection.h \
    protocol.h \
    caps-channel-manager.h \
    capabilities.h \
    capability-set.h \
    sidecar.h \
    util.h

endif
