if ENABLE_PLUGIN_API
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = telepathy-salut-1.pc

salutincludedir = $(includedir)/telepathy-salut-1/salut
salutinclude_HEADERS = \
    plugin.h \
    plugin-connection.h \
    caps-channel-manager.h \
    capabilities.h \
    capability-set.h \
    sidecar.h

endif
